# oms-parser

./: Cargo.toml  config.json  out.json
src/: main.rs  metadata.rs  parser.rs  s3.rs  structure.rs
