[package]
name = "oms-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
torrent-name-parser = "0.11.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
tmdb_client = "1.6.0"
rust-s3 = "0.32.3"
tokio = {version = "1.20.1", features = ["full"]}
dotenv = "0.15.0"
regex = "1.6.0"
rand = "0.8.5"
